[package]
name = "streamers"
version = "0.0.1"
edition = "2018"
authors = ["Brandon H. Gomes <bh.gomes@rutgers.edu>"]
documentation = "https://docs.rs/streamers"
homepage = "https://github.com/bhgomes/streamers"
repository = "https://github.com/bhgomes/streamers"
readme = "README.md"
license = "ISC"
keywords = []
categories = []
description = "Stream Utilities"
exclude = [""]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
is-it-maintained-issue-resolution = { repository = "bhgomes/streamers" }
is-it-maintained-open-issues = { repository = "bhgomes/streamers" }
maintenance = { status = "actively-developed" }

[features]
# No default features enabled
default = []

# [EXPERIMENTAL] Adds allocation
alloc = []

# [EXPERIMENTAL] Adds standard library features
std = []

# [EXPERIMENTAL] Enables Panicking Functions
panic = []

# Enables all stable features
stable = [
]

# Enables all experimental features
experimental = [
    "alloc",
    "panic",
    "rayon",
    "std",
]

# Enables all features
all = [
    "stable", 
    "experimental",
]

[dependencies]
futures = { version = "0.3.15", default-features = false }
pin-project-lite = { version = "0.2.6" }
rayon = { version = "1.5.1", optional = true }

